# serializer version: 1
# name: TestAssetCheckDataProcessing.test_asset_check_execution_all_statuses[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
      dict({
        'asset_key': 'my/asset',
        'check_name': 'test_check',
        'id': 'exec-in_progress',
        'partition': None,
        'run_id': 'run-in_progress',
        'status': 'IN_PROGRESS',
        'step_key': 'test_step',
        'timestamp': 1706745600.0,
      }),
      dict({
        'asset_key': 'my/asset',
        'check_name': 'test_check',
        'id': 'exec-succeeded',
        'partition': None,
        'run_id': 'run-succeeded',
        'status': 'SUCCEEDED',
        'step_key': 'test_step',
        'timestamp': 1706745600.0,
      }),
      dict({
        'asset_key': 'my/asset',
        'check_name': 'test_check',
        'id': 'exec-failed',
        'partition': None,
        'run_id': 'run-failed',
        'status': 'FAILED',
        'step_key': 'test_step',
        'timestamp': 1706745600.0,
      }),
      dict({
        'asset_key': 'my/asset',
        'check_name': 'test_check',
        'id': 'exec-skipped',
        'partition': None,
        'run_id': 'run-skipped',
        'status': 'SKIPPED',
        'step_key': 'test_step',
        'timestamp': 1706745600.0,
      }),
      dict({
        'asset_key': 'my/asset',
        'check_name': 'test_check',
        'id': 'exec-execution_failed',
        'partition': None,
        'run_id': 'run-execution_failed',
        'status': 'EXECUTION_FAILED',
        'step_key': 'test_step',
        'timestamp': 1706745600.0,
      }),
    ]),
  })
# ---
# name: TestAssetCheckDataProcessing.test_asset_check_list_serialization[0]
  dict({
    'items': list([
      dict({
        'asset_key': 'my/asset',
        'blocking': True,
        'can_execute_individually': None,
        'description': 'First check',
        'job_names': list([
        ]),
        'name': 'check_a',
      }),
      dict({
        'asset_key': 'my/asset',
        'blocking': False,
        'can_execute_individually': None,
        'description': None,
        'job_names': list([
        ]),
        'name': 'check_b',
      }),
    ]),
  })
# ---
# name: TestFormatAssetCheckExecutions.test_format_asset_check_executions_json_output[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
      dict({
        'asset_key': 'my/asset',
        'check_name': 'freshness_check',
        'id': 'exec-001',
        'partition': None,
        'run_id': 'run-abc-123',
        'status': 'SUCCEEDED',
        'step_key': 'my_asset_freshness_check',
        'timestamp': 1706745600.0,
      }),
      dict({
        'asset_key': 'my/asset',
        'check_name': 'freshness_check',
        'id': 'exec-002',
        'partition': None,
        'run_id': 'run-def-456',
        'status': 'FAILED',
        'step_key': 'my_asset_freshness_check',
        'timestamp': 1706659200.0,
      }),
      dict({
        'asset_key': 'my/asset',
        'check_name': 'freshness_check',
        'id': 'exec-003',
        'partition': '2024-01-29',
        'run_id': 'run-ghi-789',
        'status': 'IN_PROGRESS',
        'step_key': 'my_asset_freshness_check',
        'timestamp': 1706572800.0,
      }),
    ]),
  })
# ---
# name: TestFormatAssetCheckExecutions.test_format_asset_check_executions_text_output[0]
  '''
  STATUS       RUN_ID       TIMESTAMP                PARTITION
  SUCCEEDED    run-abc-123  2024-02-01 00:00:00 UTC  
  FAILED       run-def-456  2024-01-31 00:00:00 UTC  
  IN_PROGRESS  run-ghi-789  2024-01-30 00:00:00 UTC  2024-01-29
  '''
# ---
# name: TestFormatAssetCheckExecutions.test_format_empty_executions_json_output[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
    ]),
  })
# ---
# name: TestFormatAssetCheckExecutions.test_format_empty_executions_text_output[0]
  'No check executions found.'
# ---
# name: TestFormatAssetChecks.test_format_asset_checks_json_output[0]
  dict({
    'items': list([
      dict({
        'asset_key': 'my/asset',
        'blocking': True,
        'can_execute_individually': 'CAN_EXECUTE',
        'description': 'Checks that the asset is materialized within the last 24 hours',
        'job_names': list([
          '__ASSET_JOB_0',
        ]),
        'name': 'freshness_check',
      }),
      dict({
        'asset_key': 'my/asset',
        'blocking': False,
        'can_execute_individually': 'CAN_EXECUTE',
        'description': 'Validates minimum row count',
        'job_names': list([
          '__ASSET_JOB_0',
        ]),
        'name': 'row_count_check',
      }),
      dict({
        'asset_key': 'my/asset',
        'blocking': False,
        'can_execute_individually': 'REQUIRES_MATERIALIZATION',
        'description': None,
        'job_names': list([
        ]),
        'name': 'schema_check',
      }),
    ]),
  })
# ---
# name: TestFormatAssetChecks.test_format_asset_checks_text_output[0]
  '''
  NAME             BLOCKING  DESCRIPTION
  freshness_check  Yes       Checks that the asset is materialized within the last 24 ...
  row_count_check  No        Validates minimum row count
  schema_check     No        
  '''
# ---
# name: TestFormatAssetChecks.test_format_empty_asset_checks_json_output[0]
  dict({
    'items': list([
    ]),
  })
# ---
# name: TestFormatAssetChecks.test_format_empty_asset_checks_text_output[0]
  'No asset checks found.'
# ---
